package bt_TH.observer.CA4;

public interface TopicListener {
    void listen(TinTuc t);
}
